fix images on mobile

--- a/src/components/PersonImage/speaker-image.module.scss
+++ b/src/components/PersonImage/speaker-image.module.scss
@@ -3,12 +3,7 @@
 
 .speaker_image {
   position: relative;
-
-  @media (max-width: 480px) {
-    height: 0;
-  }
-
-  margin-top: 3rem;
+  margin-top: 0rem;
   margin-bottom: 2rem;
 
   &.orange {
