--- a/src/components/SpeakerListItem/speakerlistitem.module.scss
+++ b/src/components/SpeakerListItem/speakerlistitem.module.scss
@@ -15,6 +15,7 @@
   @media (max-width: 480px) {
     --image_size: 6rem;
     grid-column-gap: 2rem;
+    margin-bottom: 3rem;
   }
 
   h5 {
@@ -39,6 +40,9 @@
 
       h4, h5 {
         text-align: center;
+      }
+      .image {
+        margin-top: 2rem;
       }
   }
   &.left {
@@ -70,8 +74,9 @@
 .image {
   width: var(--image_size);
   height: var(--image_size);
-  margin: 0;
+  margin: 0rem 0 0 0;
   grid-area: image;
+  align-self: baseline;
   transform: translateX(0rem);
   padding-top: 0;
 }
